manually adjust m_data and m_len so it can later be prepended with a struct ip in case that a cluster is used. icmp len panic is not valid for cluster case.

Fixes PR/43548